# crewAI-multi-agents-wpp-copys

./: .gitignore  Dockerfile  README.md  a.txt  app.py  app2.py  app_st.py  db_connect.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  teste.jsonl
agents/: __init___.py  copywriter.py  copywriter_aniversario_cliente.py  copywriter_data_comemorativa.py  copywriter_giftback.py  copywriter_lancamento_colecao.py  copywriter_lancamento_produto.py  copywriter_pos_venda.py  copywriter_whatsApp.py
config/: agents.pkl  agents.yaml  tasks.yaml  treinamento.yaml
docs/: variables.txt
src/copy_writer/: crew.py  main.py
src/copy_writer/config/: agents.yaml  tasks.yaml
src/copy_writer/db/: chroma.sqlite3
utils/: helper_functions.py  ragExamplesWpp.py  zoppyVariables_tool.py
